# trezor-firmware

./: CMakeLists.txt  CODEOWNERS
ci/: posttest.yml
core/: CHANGELOG.md  Makefile
core/src/apps/common/: signverify.py
crypto/: CMakeLists.txt
tests/ui_tests/: fixtures.json
